--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
 
-    <!-- 微信搜索公众号『 程序员鱼皮 』，学习编程技术，发现更多好玩的项目！ -->
-    <title>合成大西瓜</title>
+    <!-- 위챗은 공중번호 '프로그래머 어피'를 검색하고, 프로그래밍 기술을 학습하여, 더 많은 재미있는 항목을 발견하였다！ -->
+    <title>프로그래밍 언어 합치기</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
@@ -82,7 +82,7 @@
 
 
     <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div>
-    <div id="loadingText" style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
+    <div id="loadingText" style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#C0C0C0">
         loading......0%
     </div>
 
@@ -123,7 +123,7 @@
             } else if (window.navigator.language == "zh-HK") {
                 document.title = "小遊戲：合成大西瓜";
             } else if (window.navigator.language == "ko-KR") {
-                document.title = "작은 놀이：큰 수박 을 합성 하 다";
+                document.title = "작은 놀이：큰 언어 을 합성 하 다";
             } else if (window.navigator.language == "ja-JP") {
                 document.title = "ミニゲーム：合成スイカ";
             } else if (window.navigator.language == "th-TH") {
